--- a/css/style.css
+++ b/css/style.css
@@ -2,189 +2,10 @@
  * This is the main stylesheet loaded by default.
  * Edit the file and have fun.
  * http://themefortress.com/reverie */
-meta.foundation-version {
-  font-family: "/5.2.3/";
-}
-
-meta.foundation-mq-small {
-  font-family: "/only screen/";
-  width: 0em;
-}
-
-meta.foundation-mq-medium {
-  font-family: "/only screen and (min-width:40.063em)/";
-  width: 40.063em;
-}
-
-meta.foundation-mq-large {
-  font-family: "/only screen and (min-width:64.063em)/";
-  width: 64.063em;
-}
-
-meta.foundation-mq-xlarge {
-  font-family: "/only screen and (min-width:90.063em)/";
-  width: 90.063em;
-}
-
-meta.foundation-mq-xxlarge {
-  font-family: "/only screen and (min-width:120.063em)/";
-  width: 120.063em;
-}
-
-meta.foundation-data-attribute-namespace {
-  font-family: false;
-}
-
-html, body {
-  height: 100%;
-}
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-html,
-body {
-  font-size: 100%;
-}
-
-body {
-  background: #f7f7f7;
-  color: #444444;
-  padding: 0;
-  margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  font-style: normal;
-  line-height: 1;
-  position: relative;
-  cursor: default;
-}
-
-a:hover {
-  cursor: pointer;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-img {
-  -ms-interpolation-mode: bicubic;
-}
-
-#map_canvas img,
-#map_canvas embed,
-#map_canvas object,
-.map_canvas img,
-.map_canvas embed,
-.map_canvas object {
-  max-width: none !important;
-}
-
-.left {
-  float: left !important;
-}
-
-.right {
-  float: right !important;
-}
-
-.clearfix:before, .clearfix:after {
-  content: " ";
-  display: table;
-}
-.clearfix:after {
-  clear: both;
-}
-
-.hide {
-  display: none;
-}
-
-.antialiased {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-img {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-textarea {
-  height: auto;
-  min-height: 50px;
-}
-
-select {
-  width: 100%;
-}
-
-ul.pagination {
-  display: block;
-  min-height: 1.5rem;
-  margin-left: -0.3125rem;
-}
-ul.pagination li {
-  height: 1.5rem;
-  color: #222222;
-  font-size: 0.875rem;
-  margin-left: 0.3125rem;
-}
-ul.pagination li a {
-  display: block;
-  padding: 0.0625rem 0.625rem 0.0625rem;
-  color: #999999;
-  border-radius: 3px;
-}
-ul.pagination li:hover a,
-ul.pagination li a:focus {
-  background: #e6e6e6;
-}
-ul.pagination li.unavailable a {
-  cursor: default;
-  color: #999999;
-}
-ul.pagination li.unavailable:hover a, ul.pagination li.unavailable a:focus {
-  background: transparent;
-}
-ul.pagination li.current a {
-  background: #008cba;
-  color: white;
-  font-weight: bold;
-  cursor: default;
-}
-ul.pagination li.current a:hover, ul.pagination li.current a:focus {
-  background: #008cba;
-}
-ul.pagination li {
-  float: left;
-  display: block;
-}
-
-/* Pagination centred wrapper */
-.pagination-centered {
-  text-align: center;
-}
-.pagination-centered ul.pagination li {
-  float: none;
-  display: inline-block;
-}
-
 /* Start to customize Reverie */
-a, a:visited, a:hover, a:visited:hover {
-  -moz-transition: all 100ms linear;
-  -o-transition: all 100ms linear;
-  -webkit-transition: all 100ms linear;
-  transition: all 100ms linear;
-}
-
+/*a, a:visited, a:hover, a:visited:hover {
+	@include transition(all 100ms linear);
+}*/
 figure {
   margin: 0 auto 1.25rem;
 }
@@ -277,7 +98,7 @@ time a {
 span.author a:hover, span.author a:focus,
 time a:hover,
 time a:focus {
-  color: #444444;
+  color: #444;
 }
 
 .entry-author {
@@ -294,7 +115,7 @@ time a:focus {
   color: #999;
 }
 .entry-author h4 a:hover, .entry-author h4 a:focus {
-  color: #444444;
+  color: #444;
 }
 .entry-author p {
   color: #bbb;
@@ -313,7 +134,7 @@ time a:focus {
   color: #999;
 }
 .entry-tags a:hover, .entry-tags a:focus {
-  color: #444444;
+  color: #444;
 }
 
 .page-numbers {
@@ -324,14 +145,14 @@ time a:focus {
 }
 .page-numbers li {
   height: 1.5rem;
-  color: #222222;
+  color: #222;
   font-size: 0.875rem;
   margin-left: 0.3125rem;
 }
 .page-numbers li a {
   display: block;
   padding: 0.0625rem 0.625rem 0.0625rem;
-  color: #999999;
+  color: #999;
   border-radius: 3px;
 }
 .page-numbers li:hover a,
@@ -340,19 +161,19 @@ time a:focus {
 }
 .page-numbers li.unavailable a {
   cursor: default;
-  color: #999999;
+  color: #999;
 }
 .page-numbers li.unavailable:hover a, .page-numbers li.unavailable a:focus {
   background: transparent;
 }
 .page-numbers li.current a {
-  background: #008cba;
-  color: white;
+  background: #008CBA;
+  color: #fff;
   font-weight: bold;
   cursor: default;
 }
 .page-numbers li.current a:hover, .page-numbers li.current a:focus {
-  background: #008cba;
+  background: #008CBA;
 }
 .page-numbers li {
   float: left;
@@ -379,9 +200,9 @@ time a:focus {
   background: #e6e6e6;
 }
 .page-numbers li span.current {
-  background: #008cba;
+  background: #008CBA;
   padding: 0.0625rem 0.625rem 0.0625rem;
-  color: white;
+  color: #fff;
   font-weight: bold;
   cursor: default;
 }
@@ -439,7 +260,7 @@ ol.commentlist li section.comment a.comment-reply-link {
   color: #bbb;
 }
 ol.commentlist li section.comment a.comment-reply-link:hover, ol.commentlist li section.comment a.comment-reply-link:focus {
-  color: #444444;
+  color: #444;
 }
 
 #sidebar {
@@ -456,7 +277,7 @@ ol.commentlist li section.comment a.comment-reply-link:hover, ol.commentlist li 
   font-size: 0.9375rem;
 }
 #sidebar .panel a:hover, #sidebar .panel a:focus, .footer-widget .panel a:hover, .footer-widget .panel a:focus {
-  color: #444444;
+  color: #444;
 }
 #sidebar ul, .footer-widget ul {
   list-style-type: none;
@@ -484,7 +305,7 @@ footer.full-width a {
   font-size: 0.9375rem;
 }
 footer.full-width a:hover, footer.full-width a:focus {
-  color: #444444;
+  color: #444;
 }
 footer.full-width .love-reverie {
   border-top: 1px solid #ccc;
@@ -524,4 +345,402 @@ footer.full-width .love-reverie {
     margin-top: 3rem;
     padding-top: 2rem;
   }
+}
+/* mjw custom styles for antigua bike trails */
+/* colors */
+/* odd little helpers */
+.margin-top-1 {
+  margin-top: 1em;
+}
+
+.padding-top-1 {
+  padding-top: 1em;
+}
+
+.padding-bottom-1 {
+  padding-bottom: 1em;
+}
+
+.barry-padded {
+  padding: 1em 1em 0 1em;
+}
+
+.barry-padded-sides {
+  padding: 0 1em 0 1em;
+}
+
+.bg-white {
+  background-color: white;
+}
+
+.bg-grey {
+  background: #f6f6f6;
+}
+
+.bg-green {
+  background: #8dc63f;
+}
+
+.overlay {
+  position: absolute;
+  top: 1rem;
+  left: 2rem;
+  height: 100%;
+  font-size: 1.5rem;
+  background-color: rgba(36, 174, 221, 0.5);
+  color: white;
+}
+
+.overlay-content {
+  padding: 2rem;
+  overflow: hidden;
+  font-size: 2rem;
+}
+
+body {
+  background-color: #fff;
+  background-image: url(../antigua-assets/bg-clouds.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Raleway',sans-serif;
+}
+
+body > header.contain-to-grid {
+  margin-bottom: 0;
+}
+
+.contain-to-grid {
+  background: white;
+}
+
+.trailbike-header-tagline {
+  margin-top: 2.2rem;
+  font-family: 'Raleway', sans-serif;
+  font-size: 2.5rem;
+}
+
+.trailbike-header-phone {
+  margin-top: 2rem;
+  font-family: 'Raleway', sans-serif;
+  font-size: 2rem;
+}
+
+.header {
+  margin-bottom: none;
+}
+
+.home-3tours-block {
+  min-height: 240px;
+}
+.home-3tours-block p {
+  line-height: 15rem;
+}
+.home-3tours-block a {
+  font-size: 2rem;
+  text-decoration: none;
+  color: white;
+  padding: 100px 120px;
+  /* height: 279px; */
+  /* width: 279px; */
+  background: url(../antigua-assets/island.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.home-3tours-block a:hover {
+  text-decoration: none;
+  color: #ddd;
+}
+
+.home-strapline {
+  font-size: 2.2rem;
+  line-height: 3rem;
+  padding: 1rem 0 1rem 0;
+}
+
+.home-bottom-block {
+  margin: 2em 1em 2em 1em;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-family: 'Quicksand', sans-serif;
+}
+
+footer.full-width {
+  background-color: #585756;
+  border: none;
+  padding-top: 3rem;
+}
+
+footer.inline-list ul li {
+  list-style: none;
+}
+
+/* nav bar customisation */
+.top-bar {
+  background: none;
+}
+
+.top-bar .name h1 a {
+  color: black;
+}
+
+.top-bar-section ul li {
+  background: none;
+}
+.top-bar-section li:not(.has-form) a:not(.button) {
+  background: none;
+  color: white;
+}
+
+@media only screen and (min-width: 40.063em) {
+  .top-bar {
+    background: none;
+    overflow: visible;
+  }
+
+  .top-bar:before, .top-bar:after {
+    content: " ";
+    display: table;
+  }
+
+  .top-bar:after {
+    clear: both;
+  }
+
+  .top-bar .toggle-topbar {
+    display: none;
+  }
+
+  .top-bar .title-area {
+    float: left;
+  }
+
+  .top-bar .name h1 a {
+    width: auto;
+  }
+
+  .top-bar input,
+  .top-bar .button,
+  .top-bar button {
+    font-size: 0.875rem;
+    position: relative;
+    top: 7px;
+  }
+
+  .top-bar.expanded {
+    background: #333333;
+  }
+
+  .contain-to-grid .top-bar {
+    max-width: 71.25rem;
+    margin: 0 auto;
+    margin-bottom: 0;
+  }
+
+  .top-bar-section {
+    transition: none 0 0;
+    left: 0 !important;
+  }
+
+  .top-bar-section ul {
+    width: auto;
+    height: auto !important;
+    display: inline;
+  }
+
+  .top-bar-section ul li {
+    float: left;
+  }
+
+  .top-bar-section ul li > a {
+    font-size: 0.9rem;
+    color: white;
+  }
+
+  .top-bar-section ul li.active {
+    float: left;
+    background-image: url("../antigua-assets/nav-active.png");
+    background-repeat: no-repeat;
+    background-position: 50% bottom;
+    background-width: 10px;
+  }
+
+  .top-bar-section ul li .js-generated {
+    display: none;
+  }
+
+  .top-bar-section li.hover > a:not(.button) {
+    background: none;
+    color: white;
+  }
+
+  .top-bar-section li:not(.has-form) a:not(.button) {
+    padding: 0 15px;
+    line-height: 45px;
+    background: none;
+    text-transform: uppercase;
+  }
+
+  .top-bar-section li:not(.has-form) a:not(.button):hover {
+    background: none;
+    /*image?*/
+    background-image: url("../antigua-assets/nav-active.png");
+    background-repeat: no-repeat;
+    background-position: 50% bottom;
+  }
+
+  .top-bar-section li.active:not(.has-form) a:not(.button) {
+    padding: 0 15px;
+    line-height: 45px;
+    color: white;
+    background: none;
+    /*image?*/
+    background-image: url("../antigua-assets/nav-active.png");
+    background-repeat: no-repeat;
+    background-position: 50% bottom;
+    text-transform: uppercase;
+  }
+
+  .top-bar-section li.active:not(.has-form) a:not(.button):hover {
+    background: none;
+    /*image?*/
+  }
+
+  .top-bar-section .has-dropdown > a {
+    padding-right: 35px !important;
+  }
+
+  .top-bar-section .has-dropdown > a:after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    border: inset 5px;
+    border-color: rgba(255, 255, 255, 0.4) transparent transparent transparent;
+    border-top-style: solid;
+    margin-top: -2.5px;
+    top: 22.5px;
+  }
+
+  .top-bar-section .has-dropdown.moved {
+    position: relative;
+  }
+
+  .top-bar-section .has-dropdown.moved > .dropdown {
+    display: block;
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
+  }
+
+  .top-bar-section .has-dropdown.hover > .dropdown, .top-bar-section .has-dropdown.not-click:hover > .dropdown {
+    display: block;
+    position: static !important;
+    height: auto;
+    width: auto;
+    overflow: visible;
+    clip: auto;
+    position: absolute !important;
+  }
+
+  .top-bar-section .has-dropdown .dropdown li.has-dropdown > a:after {
+    border: none;
+    content: "\00bb";
+    top: 1rem;
+    margin-top: -1px;
+    right: 5px;
+    line-height: 1.2;
+  }
+
+  .top-bar-section .dropdown {
+    left: 0;
+    top: auto;
+    background: transparent;
+    min-width: 100%;
+  }
+
+  .top-bar-section .dropdown li a {
+    color: white;
+    line-height: 45px;
+    white-space: nowrap;
+    padding: 12px 15px;
+    background: #333333;
+  }
+
+  .top-bar-section .dropdown li:not(.has-form) a:not(.button) {
+    color: white;
+    background: #333333;
+  }
+
+  .top-bar-section .dropdown li:not(.has-form):hover > a:not(.button) {
+    color: white;
+    background: #272727;
+  }
+
+  .top-bar-section .dropdown li label {
+    white-space: nowrap;
+    background: #333333;
+  }
+
+  .top-bar-section .dropdown li .dropdown {
+    left: 100%;
+    top: 0;
+  }
+
+  .top-bar-section > ul > .divider, .top-bar-section > ul > [role="separator"] {
+    border-bottom: none;
+    border-top: none;
+    border-right: none;
+    clear: none;
+    height: 45px;
+    width: 0;
+  }
+
+  .top-bar-section .has-form {
+    background: #333333;
+    padding: 0 15px;
+    height: 45px;
+  }
+
+  .top-bar-section .right li .dropdown {
+    left: auto;
+    right: 0;
+  }
+
+  .top-bar-section .right li .dropdown li .dropdown {
+    right: 100%;
+  }
+
+  .top-bar-section .left li .dropdown {
+    right: auto;
+    left: 0;
+  }
+
+  .top-bar-section .left li .dropdown li .dropdown {
+    left: 100%;
+  }
+
+  .no-js .top-bar-section ul li:hover > a {
+    background: #272727;
+    color: white;
+  }
+
+  .no-js .top-bar-section ul li:active > a {
+    background: #008cba;
+    color: white;
+  }
+
+  .no-js .top-bar-section .has-dropdown:hover > .dropdown {
+    display: block;
+    position: static !important;
+    height: auto;
+    width: auto;
+    overflow: visible;
+    clip: auto;
+    position: absolute !important;
+  }
+}
+#content {
+  border: none;
 }
