--- a/css/style.css
+++ b/css/style.css
@@ -916,13 +916,34 @@ footer.inline-list ul li {
   border: none;
 }
 
+.orbit-slide-number {
+  display: none !important;
+}
+
+.orbit-timer {
+  display: none !important;
+}
+
 .orbit-container .orbit-slides-container > li .orbit-caption {
   position: absolute;
   bottom: 0;
-  background-color: rgba(51, 51, 51, 0.8);
-  color: white;
-  width: 30%;
-  height: 100%;
+  background-color: white;
+  color: black;
+  width: 100%;
+  height: 30%;
   padding: 0.625rem 0.875rem;
   font-size: 0.875rem;
+}
+
+.orbit-caption h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.routes-first-para {
+  font-size: 1.4rem;
+}
+
+.routes-body-text {
+  font-size: 1.2rem;
 }
